--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -7,13 +7,13 @@
   			<span class="icon-bar"></span>
   			<span class="icon-bar"></span>
   		</button>
-  		<%= link_to "RooBubba Recipes", "", class: "navbar-brand logo" %>
+  		<%= link_to "RooBubba Recipes", root_path, class: "navbar-brand logo" %>
   	</div>
   	<!-- Collect the nav links, forms, and other content for toggling -->
   	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 			<ul class="nav navbar-nav">	
 				<li><%= link_to "About", "" %></li>
-				<li><%= link_to "Recipes", "" %></li>
+				<li><%= link_to "Recipes", recipes_path %></li>
 				<li><%= link_to "Contact", "" %></li>
   	  </ul>
   	</div><!-- /.navbar-collapse -->
