--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
     <h2 class="left">
       Browse recipes as a guest and sign up later
     </h2>
-    <p><%= link_to "Browse Recipes as guest", "", class: "btn btn-warning btn-small" %></p>
+    <p><%= link_to "Browse Recipes as guest", recipes_path, class: "btn btn-warning btn-small" %></p>
   </div>
     <div class="col-lg-4">
     <h3 class="midrow">
