--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid">	
   <nav class="navbar navbar-inverse">
     <div class="navbar-header">
-  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+  		<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1" aria-expanded="false">
   			<span class="sr-only">Toggle navigation</span>
   			<span class="icon-bar"></span>
   			<span class="icon-bar"></span>
@@ -10,10 +10,10 @@
   		<%= link_to "RooBubba Recipes", root_path, class: "navbar-brand logo" %>
   	</div>
   	<!-- Collect the nav links, forms, and other content for toggling -->
-  	<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+  	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav">	
-				<li><%= link_to "About", "" %></li>
-				<li><%= link_to "Recipes", recipes_path %></li>
+				<li><%= link_to "View Recipes", recipes_path %></li>
+				<li><%= link_to "New Recipe", new_recipe_path %></li>
 				<li><%= link_to "Contact", "" %></li>
   	  </ul>
   	</div><!-- /.navbar-collapse -->
