--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,9 +13,30 @@
   	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 			<ul class="nav navbar-nav">	
 				<li><%= link_to "View Recipes", recipes_path %></li>
-				<li><%= link_to "New Recipe", new_recipe_path %></li>
-				<li><%= link_to "Contact", "" %></li>
+				<% if logged_in? %><li><%= link_to "New Recipe", new_recipe_path %></li><% end %>
+				<li><%= link_to "About Us", "" %></li>
   	  </ul>
+  	  <div class="pull-right">
+  	  	<ul class="nav navbar-nav nav-item">
+  	  		<% if !logged_in? %>
+  	  			<li>
+  	  				<%= link_to "Log In", login_path %>
+  	  			</li>
+  	  		<% else %>
+  	  			<li class="dropdown">
+  	  				<%= link_to '#', class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
+  	  					<%= current_user.chefname %><b class="caret"></b>
+  	  				<% end %>
+  	  					<ul class="dropdown-menu">
+  	  						<li><%= link_to "View profile", chef_path(current_user) %></li>
+  	  						<li><%= link_to "Edit profile", edit_chef_path(current_user) %></li>
+  	  						<li class="divider"></li>
+  	  						<li><%= link_to "Log Out", logout_path %></li>
+  	  				</ul>
+  	  			</li>
+  	  		<% end %>
+  			</ul>
+ 			</div>
   	</div><!-- /.navbar-collapse -->
 	</nav>
 </div><!-- /.container-fluid -->
