--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -27,7 +27,7 @@
   	  				<%= link_to '#', class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
   	  					<%= current_user.chefname %><b class="caret"></b>
   	  				<% end %>
-  	  					<ul class="dropdown-menu">
+  	  					<ul class="dropdown-menu pull-right">
   	  						<li><%= link_to "View profile", chef_path(current_user) %></li>
   	  						<li><%= link_to "Edit profile", edit_chef_path(current_user) %></li>
   	  						<li class="divider"></li>
