--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -41,5 +41,5 @@
       </div>
     </div>
   </div>
-  
-  <h5> <%= link_to "Return to Recipes List", recipes_path, class: "btn btn-warning btn-small" %></h5>
+
+<%= render 'shared/return_buttons' %>
