add styles and ingredients views and controllers

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,7 +14,42 @@
 			<ul class="nav navbar-nav">	
 				<li><%= link_to "View Recipes", recipes_path %></li>
 				<% if logged_in? %><li><%= link_to "New Recipe", new_recipe_path %></li><% end %>
-				<li><%= link_to "About Us", "" %></li>
+  	  	<li class="dropdown">
+  	  		<%= link_to '#', class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
+  	  			Styles<b class="caret"></b>
+  	  		<% end %>
+  	  		<ul class="dropdown-menu">
+  	  			<%= Style.find_each do |style| %>
+		 	  			<li><%= link_to style.name, style_path(style) %></li>
+  					<% end %>
+  					<% if logged_in? %>
+  						<li class='divider'></li>
+  						<li>
+  							<%= link_to(new_style_path) do %>
+  								New Style
+ 								<% end %>
+  						</li>
+  					<% end %>
+    			</ul>
+	  		</li>
+	  		<li class="dropdown">
+  	  		<%= link_to '#', class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
+  	  			Ingredients<b class="caret"></b>
+  	  		<% end %>
+  	  		<ul class="dropdown-menu">
+  	  			<%= Ingredient.find_each do |ingredient| %>
+		 	  			<li><%= link_to ingredient.name, ingredient_path(ingredient) %></li>
+  					<% end %>
+  					<% if logged_in? %>
+  						<li class='divider'></li>
+  						<li>
+  							<%= link_to(new_ingredient_path) do %>
+  								New Ingredient
+ 								<% end %>
+  						</li>
+  					<% end %>
+    			</ul>
+	  		</li>
   	  </ul>
   	  <div class="pull-right">
   	  	<ul class="nav navbar-nav nav-item">
