--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -21,6 +21,12 @@
         </div>
         <div class="well">
           <p>
+            <p>Style: <%= render @recipe.styles %></p>
+            <p>Ingredients: <%= render @recipe.ingredients %></p>
+          </p>
+        </div>
+        <div class="well">
+          <p>
             <strong>
               Steps:
             </strong>
