clean up UI stylesheet

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -74,9 +74,6 @@ span.picture {
   margin: 10px 10px 10px 10px;
 }
 
-.checkbox {
-  
-}
-.checkbox-inline {
-  
+.input_checkbox input {
+  width: auto !important;
 }
