--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -23,9 +23,12 @@
       <div class="col-md-6 well">
         <h4><%= link_to recipe.name, recipe_path(recipe) %></h4>
         <p><%= recipe.summary %></p>
-        <p>Style: <%= render recipe.styles %></p>
+        <% if recipe.styles.any? %>
+          <p>Style: <%= render recipe.styles %></p>
+        <% end %>
+        <% if recipe.ingredients.any? %>
         <p>Ingredients: <%= render recipe.ingredients %></p>
-        
+        <% end %>        
         <p>
           <span class='quiet'><small>First posted <%= time_ago_in_words(recipe.created_at) %> ago</small></span>
           <% if recipe.created_at != recipe.updated_at %>
