--- a/app/views/shared/_return_buttons.html.erb
+++ b/app/views/shared/_return_buttons.html.erb
@@ -1,7 +1,8 @@
-<div class="col-sm-12 center">
-  <p>
-    <%= link_to "Return to Recipes List", recipes_path, class: "btn btn-warning btn-small" %>
-    &nbsp
-    <%= link_to "Return to Chefs List", chefs_path, class: "btn btn-warning btn-small" %>
-  </p>  
+<div class="col-xs-12 col-xs-center text-center">
+  <div class="col-sm-3 col-sm-offset-3">
+    <%= link_to "Return to Recipes List", recipes_path, class: "btn btn-success btn-small" %>
+  </div>
+  <div class="col-sm-3">
+    <%= link_to "Return to Chefs List", chefs_path, class: "btn btn-success btn-small" %>
+  </div>
 </div>
