--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,5 @@
-<br/>
-<div class="footer">
-  <p>&copy; Isaac Westwood 2016</p>
+<div class="row col-xs-12">
+  <div class="footer">
+    <p>&copy; Isaac Westwood 2016</p>
+  </div>
 </div>
