--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,35 +1,26 @@
 <div class="center jumbotron">
   <h1>Welcome to RooBubba Recipes</h1>
   <h2>Sign up here to view the recipes!</h2>
-  <%= link_to 'Sign Up', register_path, class: "btn btn-lg btn-success" %>
+  <%= link_to 'Register', register_path, class: "btn btn-lg btn-success" %>
 </div>
 
 <div class="row">
-  <div class="col-lg-4">
+  <div class="col-lg-4 col-lg-offset-1 text-center">
     <h3 class="midrow">
       View recipes as guest user
     </h3>
-    <h2 class="left midrow">
+    <h2 class="midrow">
       Browse recipes as a guest and sign up later<br><br>
     </h2>
-    <p><%= link_to "Browse Recipes as guest", recipes_path, class: "btn btn-warning btn-small" %></p>
+    <p><%= link_to "Browse Recipes as guest", recipes_path, class: "btn btn-warning" %></p>
   </div>
-    <div class="col-lg-4">
+    <div class="col-lg-4 col-lg-offset-2  text-center">
     <h3 class="midrow">
       Sign in to your profile
     </h3>
-    <h2 class="left midrow">
+    <h2 class="midrow">
       Add/update your recipes, view recipes from other chefs, like/dislike recipes and much more!
     </h2>
-    <p><%= link_to "Sign in to your profile", login_path, class: "btn btn-warning btn-small" %></p>
-  </div>
-    <div class="col-lg-4">
-    <h3 class="midrow">
-      View recipes as guest user
-    </h3>
-    <h2 class="left midrow">
-      Browse recipes as a guest and sign up later<br><br>
-    </h2>
-    <p><%= link_to "Browse Recipes as guest", "", class: "btn btn-warning btn-small" %></p>
+    <p><%= link_to "Log In", login_path, class: "btn btn-success" %></p>
   </div>
 </div>
