--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,26 +1,51 @@
-<%= render 'shared/page_title', title: "Reviews for Recipe: " + @recipe.name %>
+<%= render 'shared/page_title', title: 'Reviews for: ' + @recipe.name %>
 
-<%= will_paginate %>
+<div class="container-fluid">
+  <div class="row">
+    <div class="center">
+      <%= link_to "Return to Recipe", recipe_path(@recipe), class: "btn btn-success" %> 
+    </div>
+  </div>
+<%= will_paginate @reviews %>
 <br>
-
-<% @reviews.find_each do |review| %>
-  <div class="container-fluid">
+  
+  <% @reviews.each do |review| %>
     <div class="row">
-      <div class="col-md-2">
-        <section class="chef_info center">
-          <%= link_to gravatar_for(review.chef, size: 100), chef_path(review.chef) %>
-          <h5>Chef name: <%= review.chef.chefname %></h5>
-        </section>
+      <div class="col-sm-9 col-xs-12 nopad">
+        <div class="col-xs-4 col-sm-3 col-lg-2">
+          <section class="chef_info center">
+            <%= link_to gravatar_for(review.chef, size: 50), chef_path(review.chef) %>
+            <h5 class="text-center"><small><%= review.chef.chefname %></small></h5>
+          </section>
+        </div>
+        <div class="col-xs-6">
+          <p><strong><%= link_to recipe_review_path(id: review.id, recipe_id: review.recipe_id, chef_id: review.chef_id) do %>
+          <%= review.chef.chefname %>: <% end %></strong><%= review.body %></p>
+        </div>
       </div>
-      <div class="col-md-6 well">
-        <p><strong>Recipe: </strong><%= link_to review.recipe.name, recipe_path(review.recipe) %></p>
-        <p><strong>Review: </strong><%= review.body %></p>
+      <div class="col-sm-3 text-center">
+        <div class="row nopad">
+          <% if logged_in? and (review.chef == current_user || current_user.admin?) %>
+            <%= link_to "Edit this review", edit_recipe_review_path(recipe_id: review.recipe_id, chef_id: review.chef_id, id: review.id), class: "btn btn-warning" %>
+          <% end %>
+        </div>
+        <div class="row nopad">
+          <% if logged_in? and current_user.admin? %>
+            <%= link_to "Delete this review", recipe_review_path(recipe_id: review.recipe_id, chef_id: review.chef_id, id: review.id), method: :delete, class: "btn btn-danger", data: { confirm: "Are you sure you want to delete this review?" } %>
+          <% end %>
+        </div>
       </div>
     </div>
-    <hr/>
-  </div>
-<% end %>
+  <hr/>
+  <% end %>
 
-<%= will_paginate %>
+  <%= will_paginate @reviews %>
 
+</div>
+  
 <%= render 'shared/return_buttons' %>
+
+
+
+
+
